# evapanel

./: Cargo.toml  Cross.toml  README.md  build.rs  build.sh  e.yml  eapi.yml  evapanel-launch.sh  evapanel.yml  justfile  req-build.sh
docker.cross/: Dockerfile.cross.aarch64  Dockerfile.cross.x86_64  sources.list.arm64
src/: common.rs  eapi.rs  ev_loop.rs  main.rs
