[package]
name = "evapanel"
version = "0.2.0"
edition = "2021"
authors = ["Bohemia Automation", "Altertech"]
description = "EVA ICS HMI kiosk browser"
license = "propietary"

[dependencies]
wry = { version =  "0.50.5", features = ["devtools"] }
once_cell = "1.21.3"
bmart = "0.2.11"
env_logger = "0.11.8"
log = "0.4.27"
eva-common = { version = "0.3.93", features = ["payload", "bus-rpc"] }
tokio = { version = "1.44", features = ["full"] }
busrt = { version = "0.4", features = ["rpc", "ipc"] }
async-trait = "0.1.88"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.33"
shellexpand = "3.1.0"
hostname = "0.4.0"
tao = "0.32.8"
clap = { version = "4.5.35", features = ["derive"] }
submap = { version = "0.3.5", features = ["digest"] }
serde_json = "1.0.140"
async-channel = "2.3.1"

[build-dependencies]
ico = "0.4.0"

[target.'cfg(target_os = "linux")'.dependencies]
busrt = { version = "0.4", features = ["broker", "rpc", "ipc"] }

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1.20"

[profile.release]
strip = true
lto = true
codegen-units = 1

